<resources>
    <string name="app_name">User_Application</string>
    <string name="imagepath">http://192.168.1.13/login_information/uploads/</string>
    <string name="url">http://192.168.1.13/login_information/login_service.php?</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Pay1">Paytm</string>
    <string name="Pay2">Credit card</string>
    <string name="Pay3">Debit Card</string>
    <string name="Surat">Surat is the richest city in India ahead of Bangalore and Madras having highest per capita income in the country.The homes of Surat have been declared most prosperous by National Council of Applied Economic Research (NCAER) and Future Capital Research’s Roopa Purushothaman in their latest study. The average income of a household in the city 450,000 per year.It’s a fact that Surat is a diamond city and it’s a billion-dollar business. World’s 95% of rough diamonds are cut and polished here. Surat’s business trade contributes to 90% of the total national export of diamonds. The business never stops! British East India company set its first footsteps in Surat in the year 1818. That’s legendary! Surat has been ranked as the third cleanest city in India. In past few years it has always been in top five cleanest cities in India.  It’s ranked as the 4th fastest growing cities in the whole wide world! That’s right, in the entire world!. Believe it or not, Surat was the first Indian city to install CCTV cameras on roads to monitor the traffic movements and also increase security. There are multiple cameras on each and every road! Believe it or not, Surat was the first Indian city to install CCTV cameras on roads to monitor the traffic movements and also increase security. There are multiple cameras on each and every road! Surat is the richest city in India ahead of Bangalore and Madras having highest per capita income in the country. The homes of Surat have been declared most prosperous by National Council of Applied Economic Research (NCAER) and Future Capital Research’s Roopa Purushothaman in their latest study. The average income of a household in the city 450,000 per year.It’s a fact that Surat is a diamond city and it’s a billion-dollar business. World’s 95% of rough diamonds are cut and polished here. Surat’s business trade contributes to 90% of the total national export of diamonds. The business never stops! British East India company set its first footsteps in Surat in the year 1818. That’s legendary! Surat has been ranked as the third cleanest city in India. In past few years it has always been in top five cleanest cities in India.  It’s ranked as the 4th fastest growing cities in the whole wide world! That’s right, in the entire world!. Believe it or not, Surat was the first Indian city to install CCTV cameras on roads to monitor the traffic movements and also increase security. There are multiple cameras on each and every road! Believe it or not, Surat was the first Indian city to install CCTV cameras on roads to monitor the traffic movements and also increase security. There are multiple cameras on each and every road! Surat has an industrial belt on the coast of the Arabian Sea called as Hazira. Hazira houses heavy engineering companies like ESSAR, ADANI, RELIANCE, ONGC, SHELL, L and T, KRIBHCO, GAIL, NTPC, GSPC, ABG SHIPYARD and many others.</string>
    <string name="Mumbai">Mumbai a cosmopolitan metropolis, earlier known as Bombay, is the largest city in India and the capital of Maharashtra state. Mumbai was originally a conglomeration of seven islands on the Konkan coastline which over time were joined to form the island city of Bombay. The island was in turn joined with the neighboring island of Salsette to form Greater Bombay. The city has an estimated metropolitan population of 21 million (2005), making it one of the worlds most populous cities.  Mumbai is undoubtedly the commercial capital of India and is one of the predominant port cities in the country. Mumbai's nature as the most eclectic and cosmopolitan Indian city is symbolized in the presence of Bollywood within the city, the centre of the globally-influential Hindi film and TV industries. It is also home to India's largest slum population.</string>
    <string name="Kerela">Kerala (/ˈkɛrələ/), called Keralam in Malayalam (where Kerala is the adjectival form), is a state in South India on the Malabar Coast. It was formed on 1 November 1956 following the States Reorganisation Act by combining Malayalam-speaking regions. Spread over 38,863 km2 (15,005 sq mi), it is bordered by Karnataka to the north and northeast, Tamil Nadu to the east and south, and the Lakshadweep Sea to the west. With 33,387,677 inhabitants as per the 2011 Census, Kerala is the thirteenth-largest Indian state by population. It is divided into 14 districts with the capital being Thiruvananthapuram, which is the largest city in the state. Malayalam is the most widely spoken language and is also the official language of the state.The Chera Dynasty was the first prominent kingdom based in Kerala. The Ay kingdom in the deep south and the Ezhimala kingdom in the north formed the other kingdoms in the early years of the Common Era (CE or AD). The region had been a prominent spice exporter since 3000 BCE. The regions prominence in trade was noted in the works of Pliny as well as the Periplus around 100 CE. In the 15th century, the spice trade attracted Portuguese traders to Kerala, and paved the way for European colonisation of India. At the time of Indian independence movement in the early 20th century, there were two major princely states in Kerala-Travancore State and the Kingdom of Cochin. They united to form the state of Thiru-Kochi in 1949. The Malabar region, in the northern part of Kerala had been a part of the Madras province of British India, which later became a part of the Madras State post-independence. After the States Reorganisation Act, 1956, the modern-day state of Kerala was formed by merging the Malabar district of Madras State (excluding Gudalur taluk of Nilgiris district, Topslip, the Attappadi Forest east of Anakatti), the state of Thiru-Kochi (excluding four southern taluks of Kanyakumari district, Shenkottai and Tenkasi taluks), and the taluks of Kasaragod (now Kasaragod District) and South Kanara (Tulunad) which were a part of Madras State.Kerala has the lowest positive population growth rate in India, 3.44%; the highest Human Development Index (HDI), 0.712 in 2015; the highest literacy rate, 93.91% in the 2011 census; the highest life expectancy, 77 years; and the highest sex ratio, 1,084 women per 1,000 men. The state has witnessed significant emigration, especially to Arab states of the Persian Gulf during the Gulf Boom of the 1970s and early 1980s, and its economy depends significantly on remittances from a large Malayali expatriate community. Hinduism is practised by more than half of the population, followed by Islam and Christianity. The culture is a synthesis of Aryan, Dravidian, Arab, and European cultures,[8] developed over millennia, under influences from other parts of India and abroad.</string>
    <string name="Kolkata">Kolkata /koʊlˈkɑːtə/ ([kolkat̪a] (About this sound listen), also known as Calcutta /kælˈkʌtə/, the official name until 2001) is the capital of the Indian state of West Bengal. Located on the east bank of the Hooghly River, it is the principal commercial, cultural, and educational centre of East India, while the Port of Kolkata is Indias oldest operating port and its sole major riverine port. The city is widely regarded as the "cultural capital" of India, and is also nicknamed the "City of Joy". In 2011, the city had a population of 4.5 million, while the population of the city and its suburbs was 14.1 million, making it the third-most populous metropolitan area in India. Recent estimates of Kolkata Metropolitan Areas economy have ranged from $60 to $150 billion (GDP adjusted for purchasing power parity) making it third most-productive metropolitan area in India, after Mumbai and Delhi.In the late 17th century, the three villages that predated Calcutta were ruled by the Nawab of Bengal under Mughal suzerainty. After the Nawab granted the East India Company a trading licence in 1690,[16] the area was developed by the Company into an increasingly fortified trading post. Nawab Siraj ud-Daulah occupied Calcutta in 1756, and the East India Company retook it the following year. In 1793 the East India company was strong enough to abolish Nizamat (local rule), and assumed full sovereignty of the region. Under the company rule, and later under the British Raj, Calcutta served as the capital of British-held territories in India until 1911, when its perceived geographical disadvantages, combined with growing nationalism in Bengal, led to a shift of the capital to New Delhi. Calcutta was the centre for the Indian independence movement; it remains a hotbed of contemporary state politics. Following Indian independence in 1947, Kolkata, which was once the centre of modern Indian education, science, culture, and politics, suffered several decades of economic stagnation.</string>
    <string name="Shimla">Shimla (English: /ˈʃɪmlə/; Hindi: [ˈʃɪmlaː] (About this sound listen)), also known as Simla, is the capital and the largest city of the northern Indian state of Himachal Pradesh. Shimla is also a district which is bounded by Mandi and Kullu in the north, Kinnaur in the east, the state of Uttarakhand in the south-east, and Solan and Sirmaur. In 1864, Shimla was declared as the summer capital of British India, succeeding Murree, northeast of Rawalpindi. After independence, the city became the capital of Punjab and was later named the capital of Himachal Pradesh. It is the principal commercial, cultural and educational centre of the state.Small hamlets were recorded prior to 1815 when British forces took control of the area. The climatic conditions attracted the British to establish the city in the dense forests of Himalayas. As the summer capital, Shimla hosted many important political meetings including the Simla Accord of 1914 and the Simla Conference of 1945. After independence, the state of Himachal Pradesh came into being in 1948 as a result of integration of 28 princely states. Even after independence, the city remained an important political centre, hosting the Simla Agreement of 1972. After reorganisation of state of Himachal Pradesh, the existing Mahasu district was named Shimla. Its name is derived from the goddess Shyamala Devi, an incarnation of the Hindu goddess Kali.</string>
    <string name="contact_form_name">Your Name :</string>
    <string name="contact_form_email">Your Email :</string>
    <string name="contact_form_subject">Subject :</string>
    <string name="contact_form_message">Message :</string>
    <string name="contact_form_button">Send Message </string>
</resources>