<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.simra_000.user_application.Profile.ContactUs">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_name"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/your_name"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20dp"
            android:hint="Enter Your Name"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_email"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/your_email"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="20dp"
            android:hint="Enter your Email"/>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_subject"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/your_subject"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20dp"
            android:hint="Enter Your Subject"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_message"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/your_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:height="110dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textSize="20dp"
            android:hint="Enter Your Message"/>

        <Button
            android:id="@+id/post_message"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:background="#ff8a65"
            android:paddingBottom="1dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="1dp"
            android:text="@string/contact_form_button"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="20dp" />
    </LinearLayout>
</LinearLayout>
